# agude.github.io

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  .rubocop.yml  .yardopts  404.md  AGENTS.md  ARCHITECTURE_REFACTOR.md  CLAUDE.md  CNAME  Dockerfile  Dockerfile.prettier  Gemfile  Makefile  Rakefile  _config.yml  _config_docker.yml  about.md  ai_studio_code.py  atom.xml  bluesky.md  feed.xml  index.md  lab41.md  linktree.md  llms.txt  omemo-fingerprints.md  papers.md  patterns.md  plan.md  privacy-policy.md  resume.md  robots.txt  test.md  test_page.md  twitter-disavow.md  twitter_disavow.md
_scripts/: backdate_rating.py  bolos.md  book_ranking_state.json  compare_backlinks.py  extract_book_data.py  fetch_author_same_as.py  fetch_book_metadata.py  fix_rubocop_warnings_bisect.sh  format_first_para.py  format_isbn.py  generate_llm_prompts.sh  generate_ranking_tool_elo.py  generate_ranking_tool_sorted.py  generate_visual_ranker.py  html_diff.py  jekyll_clean_captures.py  list_scripts.py  make_author_pages.py  make_pages.py  push_ratings_from_ranking.py  pyproject.toml  reorder_ranking.py  update_book_metadata.py  update_link_functions.py  wikidata_utils.py
_scripts/atproto/: publish.py
_scripts/content/: backdate_rating.py  format_first_para.py  jekyll_clean_captures.py  make_pages.py
_scripts/diagnostics/: compare_backlinks.py  html_diff.py
_scripts/metadata/: fetch_author_same_as.py  fetch_book_metadata.py  list_editions.py  update_book_metadata.py  wikidata_utils.py
_scripts/rankers/: generate_elo_calculator.py  generate_ranking_tool_elo.py  (+2 more)
(+1493 files in other folders)
